fix: removed extra padding at bottom

--- a/public/styles.css
+++ b/public/styles.css
@@ -187,7 +187,7 @@ input::placeholder{
     padding: 1rem;
 }
 .m-bot{
-    margin-bottom: 45px !important;
+    /* margin-bottom: 45px !important; */
 }
 .m-right-5{
     margin-right: .5rem;
